Java, Spring and Vaadin updated